<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>io.github.benas</groupId>
    <artifactId>random-beans-parent</artifactId>
    <version>3.8.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Random Beans</name>
    <description>Random Beans is a library to generate random Java beans</description>
    <url>https://github.com/benas/random-beans</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <lombok.version>1.16.18</lombok.version>
        <junit.version>5.1.0</junit.version>
        <faker.version>0.14</faker.version>
        <assertj.version>3.9.0</assertj.version>
        <validation-api.version>2.0.1.Final</validation-api.version>
        <joda-time.version>2.9.9</joda-time.version>
        <spring-context.version>4.3.10.RELEASE</spring-context.version>
        <objenesis.version>2.6</objenesis.version>
        <fast-classpath-scanner.version>2.18.1</fast-classpath-scanner.version>
        <hibernate-validator.version>6.0.8.Final</hibernate-validator.version>
        <javax.el.version>3.0.0</javax.el.version>
        <jackson.version>2.9.4</jackson.version>
        <mockito.version>2.17.0</mockito.version>
        <junit-dataprovider.version>2.2</junit-dataprovider.version>
        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
        <maven-cobertura-plugin.version>2.7</maven-cobertura-plugin.version>
        <maven-coveralls-plugin.version>4.3.0</maven-coveralls-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-license-plugin.version>3.0</maven-license-plugin.version>
    </properties>

    <modules>
        <module>random-beans</module>
        <module>random-beans-spring</module>
        <module>random-beans-validation</module>
        <module>random-beans-jodatime</module>
        <module>random-beans-randomizers</module>
        <module>random-beans-bom</module>
    </modules>

    <scm>
        <url>git@github.com:benas/random-beans.git</url>
        <connection>scm:git:git@github.com:benas/random-beans.git</connection>
        <developerConnection>scm:git:git@github.com:benas/random-beans.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.org/benas/random-beans</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/benas/random-beans/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>benas</id>
            <name>Mahmoud Ben Hassine</name>
            <url>http://benas.github.io</url>
            <email>mahmoud.benhassine@icloud.com</email>
            <roles>
                <role>Lead developer</role>
            </roles>
        </developer>
        <developer>
            <id>PascalSchumacher</id>
            <name>Pascal Schumacher</name>
            <url>https://github.com/PascalSchumacher</url>
            <roles>
                <role>Core developer</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Alberto Lagna</name>
            <url>https://github.com/alagna</url>
        </contributor>
        <contributor>
            <name>Adriano Machado</name>
            <url>https://github.com/ammachado</url>
        </contributor>
        <contributor>
            <name>Jose Manuel Prieto</name>
            <url>https://github.com/prietopa</url>
        </contributor>
        <contributor>
            <name>Eric Taix</name>
            <url>https://github.com/eric-taix</url>
        </contributor>
        <contributor>
            <name>Nikola Milivojevic</name>
            <url>https://github.com/dziga</url>
        </contributor>
        <contributor>
            <name>Oleksandr Shcherbyna</name>
            <url>https://github.com/sansherbina</url>
        </contributor>
        <contributor>
            <name>Rémi Alvergnat</name>
            <url>http://www.pragmasphere.com</url>
        </contributor>
        <contributor>
            <name>Rodrigue Alcazar</name>
            <url>https://github.com/rodriguealcazar</url>
        </contributor>
        <contributor>
            <name>Fred Eckertson</name>
            <url>https://github.com/feckertson</url>
        </contributor>
        <contributor>
            <name>Rebecca McQuary</name>
            <url>https://github.com/rmcquary</url>
        </contributor>
        <contributor>
            <name>Vincent Potucek</name>
            <url>https://github.com/punkratz312</url>
        </contributor>
        <contributor>
            <name>Dovid Kopel</name>
            <url>https://github.com/dovidkopel</url>
        </contributor>
        <contributor>
            <name>Valters Vingolds</name>
            <url>https://github.com/valters</url>
        </contributor>
        <contributor>
            <name>kermit-the-frog</name>
            <url>https://github.com/kermit-the-frog</url>
        </contributor>
        <contributor>
            <name>Lucas Andersson</name>
            <url>https://github.com/LucasAndersson</url>
        </contributor>
        <contributor>
            <name>euZebe</name>
            <url>https://github.com/euzebe</url>
        </contributor>
        <contributor>
            <name>Petromir Dzhunev</name>
            <url>https://github.com/petromir</url>
        </contributor>
        <contributor>
            <name>de-x</name>
            <url>http://huningd.github.io</url>
        </contributor>
        <contributor>
            <name>Ryan Dunckel</name>
            <url>https://github.com/sparty02</url>
        </contributor>
        <contributor>
            <name>Sam Van Overmeire</name>
            <url>https://github.com/VanOvermeire</url>
        </contributor>
    </contributors>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.benas</groupId>
                <artifactId>random-beans</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.benas</groupId>
                <artifactId>random-beans-randomizers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda-time.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-context.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.lukehutch</groupId>
                <artifactId>fast-classpath-scanner</artifactId>
                <version>${fast-classpath-scanner.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.el</artifactId>
                <version>${javax.el.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.javafaker</groupId>
                <artifactId>javafaker</artifactId>
                <version>${faker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.junit.dataprovider</groupId>
                <artifactId>junit-jupiter-dataprovider</artifactId>
                <version>${junit-dataprovider.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <verbose>true</verbose>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-verbose</arg>
                            <arg>-Xlint:unchecked</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <includes>
                            <include>**/*Test*.java</include>
                        </includes>
                        <reportFormat>html</reportFormat>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.platform</groupId>
                            <artifactId>junit-platform-surefire-provider</artifactId>
                            <version>1.1.0</version>
                        </dependency>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>${junit.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eluder.coveralls</groupId>
                    <artifactId>coveralls-maven-plugin</artifactId>
                    <version>${maven-coveralls-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>${maven-cobertura-plugin.version}</version>
                    <configuration>
                        <format>xml</format>
                        <maxmem>256m</maxmem>
                        <aggregate>true</aggregate>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${maven-license-plugin.version}</version>
                <configuration>
                    <header>licence-header-template.txt</header>
                    <properties>
                        <currentYear>2017</currentYear>
                    </properties>
                    <strictCheck>true</strictCheck>
                    <includes>
                        <include>src/**/*.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java9+</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <argLine>--add-modules java.xml.bind</argLine>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <verbose>true</verbose>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                            <showWarnings>true</showWarnings>
                            <fork>true</fork>
                            <compilerArgs>
                                <arg>-verbose</arg>
                                <arg>-Xlint:unchecked</arg>
                                <arg>-J--illegal-access=permit</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
